<resources>
    <string name="app_name">TTAExampleEstrella</string>
    <string name="login_placeholder">Introduce tu DNI</string>
    <string name="psswd_placeholder">Introduce la contraseña</string>
    <string name="accessBtn">ACCEDER</string>
    <string name="lessonName">Lección 1: Introducción a Android</string>
    <string name="nTest">NUEVO TEST</string>
    <string name="nExercise">NUEVO EJERCICIO</string>
    <string name="assessment">SEGUIMIENTO</string>
    <string name="btnSend">ENVIAR</string>
    <string name="fileSend">SUBIR FICHERO</string>
    <string name="picTake">SACAR FOTO</string>
    <string name="audRec">GRABAR AUDIO</string>
    <string name="vidRec">GRABAR VÍDEO</string>
    <string name="loginErrToast">Usuario o contraseña erróneos</string>
    <string name="no_cam">No hay cámara</string>
    <string name="no_app">No existe una app para esta función</string>
    <string name="no_mic">No hay micro</string>
    <string name="helpBtn">VER AYUDA</string>
    <string name="cAns">¡Correcto!</string>
    <string name="fAns">Has fallado, mira la ayuda</string>
    <string name="uname">Nombre: </string>
    <string name="title">Lección: </string>
    <string name="nextTest2Do">Próximo Test: </string>
    <string name="nextEx2Do">Próximo Ejercicio: </string>
    <string name="onSendSuccess">Opción enviada con éxito</string>
    <string name="onSendFail">Error al enviar opción</string>
    <string name="onUploadSuccess">Subido con éxito</string>
    <string name="onUploadFail">Error al subir</string>
</resources>
