<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.tta.ttaexampleestrella.ExerciseActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/nExWording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/sendFileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileSend"/>
    <Button
        android:id="@+id/takePicBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picTake"
        android:onClick="takePicture"/>
    <Button
        android:id="@+id/audRecBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audRec"
        android:onClick="recordAudio"/>
    <Button
        android:id="@+id/vidRecBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vidRec"/>
</LinearLayout>
